# Triple-Inverted-Pedulum

./: .gitignore  MUJOCO_LOG.TXT  README.md  journal.md  triple_pendulum_simulation.py  triple_pendulum_ui.py
_extracted_urdf/finaltripleinvertedpendulum/launch/: finaltripleinvertedpendulum.launch
_extracted_urdf/finaltripleinvertedpendulum/meshes/: 1310_0016_5008 rev3.gltf  1311 Series Thru_Hole Sonic Hub _8mm REX_ Bore_ 1311_0016_4008.gltf  Motor Sleeve.gltf  Part 3.gltf
_extracted_urdf/finaltripleinvertedpendulum/urdf/: finaltripleinvertedpendulum.urdf
_extracted_urdf_v2/finaltripleinvertedpendulum/meshes/: 1310 Series Hyper Hub _8mm REX_ Bore_ 1310_0016_4008.gltf  3501 Series Lead Screw _8mm Lead_ 4 Start_ 300mm Length_ 3501_0804_0300.gltf  3505 Series Lead Screw Pattern Nut _8mm Lead_ 4 Start_ 32mm OD_ 16mm Length_ 3505_0804_3216.gltf  Axle Part.gltf  Part 1.gltf  Part 4.gltf  Part 5.gltf  (+1 more)
docs/: index.html
isaaclab/: README.md  _launcher.py  inspect_mechanism.py  list_envs.py  play_sb3.py  run_all.ps1  sanitize_urdf_assets.py  train_sb3.py
source/triple_pendulum_isaac/: README.md  pyproject.toml
source/triple_pendulum_isaac/triple_pendulum_isaac/: __init__.py
source/triple_pendulum_isaac/triple_pendulum_isaac/tasks/: __init__.py
source/triple_pendulum_isaac/triple_pendulum_isaac/tasks/direct/: __init__.py
source/triple_pendulum_isaac/triple_pendulum_isaac/tasks/direct/triple_inverted_pendulum/: __init__.py  env.py
source/triple_pendulum_isaac/triple_pendulum_isaac/tasks/direct/triple_inverted_pendulum/agents/: __init__.py  sb3_ppo_cfg.yaml
(+7 files in other folders)
